--- a/David/reactive/topBar/style.css
+++ b/David/reactive/topBar/style.css
@@ -1,3 +1,4 @@
+/** Global styles */
 :global(body) {
     margin:0px;
     padding:0px;
@@ -6,6 +7,7 @@
     height:5000px;
     max-width:100vw;
 }
+/** Navbar styles */
 .navbar {
     height:10vh;
     max-width:100vw;
@@ -20,13 +22,16 @@
     display:flex;
     justify-content:center;
     align-items:center;
-    border:black solid 1px;
-    transition: background-color 0.7s;
+    transition: border-width 0.7s, border-color 0.7s, background-color 0.7s;
 }
 .sticky {
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
+}
+/** Theme Selector Styles */
+.j-right {
+    transition: opacity 1.5s, height 1.5s;
 }
 .theme-selector {
     position:absolute;
@@ -34,18 +39,6 @@
     right:0px;
     border-top:hidden;
     transition: border 1s, background-color 1s;
-}
-.j-right {
-    transition: opacity 1.5s;
-}
-.hide {
-    opacity: 0;
-    height:0px;
-    display:hidden;
-}
-.show {
-    opacity:100;
-    height:fit-content;
 }
 .theme-selector h4 {
     margin-top:5px;
@@ -65,5 +58,36 @@
     justify-content:center;
     margin-bottom:5px;
     align-items:center;
-    transition: border 0.5s, background-color 0.5s;
+    transition: border-width 0.7s, border-color 0.7s, background-color 0.7s;
+}
+/** Theme Selector visibility styles */
+.hide {
+    opacity: 0;
+    height:0px;
+    display:hidden;
+}
+.show {
+    opacity:100;
+    height:fit-content;
+}
+/** Page Content styles*/
+.page-content {
+    max-width:100vw;
+    height:100%;
+    transition: background-color 1s;
+}
+.btn-test {
+    width:20vw;
+    height:10vh;
+    display:flex;
+    float: right;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    transition: background-color 0.7s, border-width 0.7s, border-color 1s;
+}
+.arrow::after {
+    content:">>";
+    margin:15px;
+    font-size: 20px;
 }
